# DSA-in-C-

./: Act2.cpp  Act2.h  Act4.cpp  Act4.h  CMakeLists.txt  LAb2Task1.cpp  LAb2Task1.h  Task2.cpp  act1.cpp  act1.h  lab2task.cpp  lab2task.h  lab2task2.cpp  lab2task2.h
