cmake_minimum_required(VERSION 4.0)
project(DS_C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(DS_C__ Task1.cpp
        Task2.cpp
        Task2.h
        DS/task3.cpp
        act1.cpp
        act1.h
        Act2.cpp
        Act2.h
        Act4.cpp
        Act4.h
        LAb2Task1.cpp
        LAb2Task1.h
        lab2task2.cpp
        lab2task2.h
        lab2task.cpp
        lab2task.h)
